force-app/main/default/objects/Account/fields/Third_Party_Insurance_Company__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Insurance_Company__c</fullName>
    <description>Third Party</description>
    <inlineHelpText>Third Party</inlineHelpText>
    <label>Third Party Insurance Company</label>
    <type>TextArea</type>
</CustomField>