force-app/main/default/objects/Account/fields/Total_Client_Rebate__c.field-meta.xml
<CustomField>
    <fullName>Total_Client_Rebate__c</fullName>
    <label>Total Client Rebate</label>
    <summarizedField>Opportunity.Client_Rebate_Amount__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>