force-app/main/default/objects/Account/fields/Total_Closed_with_No_Loan__c.field-meta.xml
<CustomField>
    <fullName>Total_Closed_with_No_Loan__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Total Amount of Opportunities in the Closed with No Loan Stage (Law Firm)</inlineHelpText>
    <label>Total Closed with No Loan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>