force-app/main/default/objects/Account/fields/Total_in_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Total_in_Pipeline__c</fullName>
    <formula>Total_Prospecting__c + Total_Intake__c + Total_Loan_Approved__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total in Pipeline</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>