force-app/main/default/objects/Account/fields/Total_Intake__c.field-meta.xml
<CustomField>
    <fullName>Total_Intake__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Total Amount of Opportunities in the Intake Stage (Law Firm)</inlineHelpText>
    <label>Total Intake</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>