force-app/main/default/objects/Account/fields/Total_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Total_Outstanding__c</fullName>
    <formula>All_Payout_Balance__c - Total_Rebate_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>