force-app/main/default/objects/Account/fields/Total_Rebate_Discount__c.field-meta.xml
<CustomField>
    <fullName>Total_Rebate_Discount__c</fullName>
    <label>Total Rebate Discount</label>
    <summarizedField>Opportunity.Rebate_to_Lawyer__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>