force-app/main/default/objects/Account/fields/Total_Shortfall__c.field-meta.xml
<CustomField>
    <fullName>Total_Shortfall__c</fullName>
    <label>Total Shortfall</label>
    <summarizedField>Opportunity.Total_Shortfall__c</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>