force-app/main/default/objects/Account/recordTypes/Assessment_Provider.recordType-meta.xml
<RecordType>
    <fullName>Assessment_Provider</fullName>
    <active>true</active>
    <description>Assessment Provider Accounts</description>
    <label>Assessment Provider</label>
</RecordType>