force-app/main/default/objects/Account/recordTypes/General_Business.recordType-meta.xml
<RecordType>
    <fullName>General_Business</fullName>
    <active>true</active>
    <description>Service Provider Facility, Litigation Lender, Contractor, Vendor &amp; Other Account Types</description>
    <label>General Business</label>
</RecordType>