force-app/main/default/objects/Account/recordTypes/Law_Firm.recordType-meta.xml
<RecordType>
    <fullName>Law_Firm</fullName>
    <active>true</active>
    <description>Law Firm Accounts</description>
    <label>Law Firm</label>
</RecordType>