force-app/main/default/objects/Account/listViews/Adesse_Legal_Services.listView-meta.xml
<ListView>
    <fullName>Adesse_Legal_Services</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Adesse Legal Services</label>
</ListView>