force-app/main/default/objects/Account/listViews/Boudreau_Law.listView-meta.xml
<ListView>
    <fullName>Boudreau_Law</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Boudreau Law</label>
</ListView>