force-app/main/default/objects/Account/listViews/Findley_Attorneys.listView-meta.xml
<ListView>
    <fullName>Findley_Attorneys</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account_Type__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>Findley Attorneys</label>
</ListView>