force-app/main/default/objects/Account/listViews/Law_firms_with_Authorization_Clause.listView-meta.xml
<ListView>
    <fullName>Law_firms_with_Authorization_Clause</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Authorization_Clause__c</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Law_Firm</value>
    </filters>
    <filters>
        <field>Authorization_Clause__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <label>Law firms - with Authorization Clause</label>
</ListView>