force-app/main/default/objects/Account/listViews/X00_All_Accounts.listView-meta.xml
<ListView>
    <fullName>X00_All_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Related_Law_Firm__c</columns>
    <columns>ACCOUNT.ADDRESS1_STREET</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>Account_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.ADDRESS1_STATE</field>
        <operation>startsWith</operation>
        <value>A</value>
    </filters>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Law_Firm</value>
    </filters>
    <filters>
        <field>Account_Type__c</field>
        <operation>equals</operation>
        <value>Lawyer,Law Firm</value>
    </filters>
    <label>00 - All Accounts</label>
</ListView>